--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="content">
             <h1 class="anim b">Welcome to<br>The Fitness World</h1>
-            <p class="anim">Underground Fitness will give the best fitness assistant you need. So join now to discover a new era of fitness excellence with Underground Fitness.</p>
+            <p class="anim">Underground Fitness will give the best fitness assistance you need. So join now to discover a new era of fitness excellence with Underground Fitness.</p>
                 <a href="#" class="btn anim">Join Now</a>
         </div>
         <img src="images/pic.png" class="feature-img anim b">
